import { describe, test, expect } from "bun:test"
import { generate, type OpenAPISpec } from "../zenko"
import * as fs from "fs"
import jsYaml from "js-yaml"

describe("generate", () => {
  describe("Petstore OpenAPI spec", () => {
    test("generates complete TypeScript output", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toMatchSnapshot("petstore-complete-output")
    })

    test("includes Zod import", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toContain('import { z } from "zod"')
    })

    test("generates schemas in correct dependency order", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      // Pet should come before Pets since Pets references Pet
      const petIndex = result.indexOf("export const Pet =")
      const petsIndex = result.indexOf("export const Pets =")
      expect(petIndex).toBeGreaterThan(-1)
      expect(petsIndex).toBeGreaterThan(-1)
      expect(petIndex).toBeLessThan(petsIndex)
    })

    test("generates all expected schemas", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toContain("export const Pet =")
      expect(result).toContain("export const Pets =")
      expect(result).toContain("export const Error =")
      expect(result).toContain("export type Pet =")
      expect(result).toContain("export type Pets =")
      expect(result).toContain("export type Error =")
    })

    test("generates path functions", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toContain("export const paths = {")
      expect(result).toContain("listPets:")
      expect(result).toContain("createPets:")
      expect(result).toContain("showPetById:")
    })

    test("generates operation objects", () => {
      const petstoreContent = fs.readFileSync(
        "src/resources/petstore.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(petstoreContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toContain("export const listPets =")
      expect(result).toContain("export const createPets =")
      expect(result).toContain("export const showPetById =")
    })

    test("supports strict options", () => {
      const strictSpec: OpenAPISpec = {
        openapi: "3.0.0",
        info: { title: "Strict", version: "1.0.0" },
        paths: {},
        components: {
          schemas: {
            StrictExample: {
              type: "object",
              required: ["timestamp", "count"],
              properties: {
                timestamp: { type: "string", format: "date-time" },
                count: { type: "number", minimum: 0, maximum: 10 },
              },
            },
          },
        },
      }

      const result = generate(strictSpec, {
        strictDates: true,
        strictNumeric: true,
      })

      expect(result).toContain("z.string().datetime()")
      expect(result).toContain(".min(0)")
      expect(result).toContain(".max(10)")
    })
  })

  describe("TicTacToe OpenAPI spec", () => {
    test("generates complete TypeScript output", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml)

      expect(result).toMatchSnapshot("tictactoe-complete-output")
    })

    test("generates complete TypeScript output with strict options", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml, {
        strictDates: true,
        strictNumeric: true,
      })

      expect(result).toMatchSnapshot("tictactoe-complete-output")
    })

    test("generates header functions for security schemes", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml)

      // Should generate header functions
      expect(result).toContain("export const headers = {")

      // TicTacToe has no request headers, so functions should be empty
      expect(result).toContain("get-board: () => ({}),")
      expect(result).toContain("get-square: () => ({}),")
      expect(result).toContain("put-square: () => ({}),")
    })

    test("includes headers in operation objects when request headers exist", () => {
      const optionalHeaderContent = fs.readFileSync(
        "src/resources/optional-headers.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(optionalHeaderContent) as OpenAPISpec
      const result = generate(specYaml)

      // Should include headers when request headers exist
      expect(result).toContain("headers: headers.createMatrix,")

      // Should generate proper header function with parameters
      expect(result).toContain(
        "createMatrix: (params: { Agent?: string } = {}) =>\n    params.Agent !== undefined ? { Agent: params.Agent } : {},"
      )
    })

    test("generates all expected schemas with proper types", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml)

      // Should generate all schemas
      expect(result).toContain("export const errorMessage =")
      expect(result).toContain("export const coordinate =")
      expect(result).toContain("export const mark =")
      expect(result).toContain("export const board =")
      expect(result).toContain("export const winner =")
      expect(result).toContain("export const status =")

      // Should generate inferred types
      expect(result).toContain("export type errorMessage =")
      expect(result).toContain("export type coordinate =")
      expect(result).toContain("export type mark =")
      expect(result).toContain("export type board =")
      expect(result).toContain("export type winner =")
      expect(result).toContain("export type status =")
    })

    test("generates path functions with parameters", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml)

      // Should generate path functions
      expect(result).toContain("export const paths = {")
      expect(result).toContain('get-board: () => "/board",')
      expect(result).toContain(
        "get-square: ({ row, column }: { row: string, column: string }) =>"
      )
      expect(result).toContain(
        "put-square: ({ row, column }: { row: string, column: string }) =>"
      )
    })

    test("generates operation objects with correct properties", () => {
      const tictactoeContent = fs.readFileSync(
        "src/resources/tictactoe.yaml",
        "utf8"
      )
      const specYaml = jsYaml.load(tictactoeContent) as OpenAPISpec
      const result = generate(specYaml)

      // Should generate operation objects
      expect(result).toContain("export const get-board = {")
      expect(result).toContain("export const get-square = {")
      expect(result).toContain("export const put-square = {")

      // Should include correct properties
      expect(result).toContain("path: paths.get-board,")
      expect(result).toContain("path: paths.get-square,")
      expect(result).toContain("path: paths.put-square,")

      // Should include response types
      expect(result).toContain("response: status,")
      expect(result).toContain("response: mark,")

      // Should include request type where applicable
      expect(result).toContain("request: mark,")
    })
  })

  describe("Edge cases", () => {
    test("handles empty spec", () => {
      const emptySpec: OpenAPISpec = {
        openapi: "3.0.0",
        info: { title: "Empty", version: "1.0.0" },
        paths: {},
      }
      const result = generate(emptySpec)

      expect(result).toContain('import { z } from "zod"')
      expect(result).toContain("export const paths = {")
      expect(result).toMatchSnapshot("empty-spec-output")
    })

    test("handles spec with no components", () => {
      const simpleSpec: OpenAPISpec = {
        openapi: "3.0.0",
        info: { title: "Simple", version: "1.0.0" },
        paths: {
          "/test": {
            get: {
              operationId: "getTest",
              responses: {
                "200": {
                  description: "OK",
                },
              },
            },
          },
        },
      }
      const result = generate(simpleSpec)

      expect(result).toContain("getTest:")
      expect(result).toMatchSnapshot("no-components-spec-output")
    })

    test("handles circular dependencies gracefully", () => {
      const circularSpec: OpenAPISpec = {
        openapi: "3.0.0",
        info: { title: "Circular", version: "1.0.0" },
        paths: {},
        components: {
          schemas: {
            A: {
              type: "object",
              properties: {
                b: { $ref: "#/components/schemas/B" },
              },
            },
            B: {
              type: "object",
              properties: {
                a: { $ref: "#/components/schemas/A" },
              },
            },
          },
        },
      }
      const result = generate(circularSpec)

      expect(result).toContain("export const A =")
      expect(result).toContain("export const B =")
      expect(result).toMatchSnapshot("circular-dependencies-output")
    })
  })
})
